--- a/SkyOfSteel.csproj
+++ b/SkyOfSteel.csproj
@@ -60,7 +60,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="**/*.cs" />
+    <Compile Include="**/*.cs" Exclude="Tests/**" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
